# MTURK_DETECT

./: Missing_ltds-Copy1.ipynb  README.md  pyproject.toml  requirements.txt
services/: django_setup.py  main.py  step1_problem_qs.py  step2_work_detection.py
