[tool.poetry]
name = "mturk-detect"
version = "0.1.0"
description = "Scripts extracted from Missing_ltds-Copy1.ipynb"
authors = []
readme = "README.md"
packages = [{ include = "services" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
numpy = ">=1.24"
pandas = ">=2.0"
scikit-learn = ">=1.3"
scipy = ">=1.10"
django = ">=4.2"

[tool.poetry.scripts]
missing-ltds = "services.main:main"

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
